[package]
name = "monkey_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.22.0"
# Was used -- but was replaced in favour of manual parser
# chumsky = "0.8.0"
thiserror = "^1.0.32"